--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>DevOps Demo</title></head>
 <body>
-<h1>Deployed via Jenkins CI/CD 🚀</h1>
+<h1>Deployed via Jenkins CI/CD </h1>
 </body>
 </html>
